--- a/starter.ipynb
+++ b/starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from dataloader import *\n",
     "from utils import *\n",
     "import torchvision\n",
+    "import torch.nn.modules.loss as loss\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "from torch.autograd import Variable\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_weights(m):\n",
     "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
-    "        torch.nn.init.xavier_uniform(m.weight.data)\n",
-    "        torch.nn.init.xavier_uniform(m.bias.data)\n",
+    "        torch.nn.init.xavier_uniform_(m.weight.data)\n",
+    "        torch.nn.init.zeros_(m.bias.data)\n",
+    "        #torch.nn.init.xavier_uniform_(m.bias.data)\n",
     "        \n",
     "epochs     = 100\n",
-    "criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\n",
+    "#criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\n",
+    "criterion = loss.BCELoss()\n",
     "fcn_model = FCN(n_class=n_class)\n",
     "fcn_model.apply(init_weights)\n",
     "#fcn_model = torch.load('best_model')\n",
@@ -61,25 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-36-c8a73a625c62>, line 43)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-c8a73a625c62>\"\u001b[0;36m, line \u001b[0;32m43\u001b[0m\n\u001b[0;31m    if __name__ == \"__main__\":\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "use_gpu = torch.cuda.is_available()\n",
     "if use_gpu:\n",
     "    fcn_model = fcn_model.cuda()\n",
-    "    \n",
+    "    computing_device = torch.device('gpu')\n",
+    "else:\n",
+    "    computing_device = torch.device('cpu')\n",
+    "\n",
     "def train():\n",
     "    for epoch in range(epochs):\n",
     "        ts = time.time()\n",
     "        for iter, (X, tar, Y) in enumerate(train_loader):\n",
     "            optimizer.zero_grad()\n",
     "\n",
-    "            if use_gpu:\n",
-    "                inputs = # Move your inputs onto the gpu\n",
-    "                labels = # Move your labels onto the gpu\n",
-    "            else:\n",
-    "                inputs, labels = # Unpack variables into inputs and labels\n",
+    "\n",
+    "            inputs = X.to(computing_device)\n",
+    "            labels = Y.to(computing_device)\n",
+    "\n",
     "\n",
     "            outputs = fcn_model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
@@ -109,13 +123,20 @@
     "    val(0)  # show the accuracy before training\n",
     "    train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.4 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python36464bit85f46fc4f2da408eb7ce131108b07d88"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.4-final"
   }
  },
  "nbformat": 4,
