--- a/starter.ipynb
+++ b/starter.ipynb
@@ -28,16 +28,16 @@
     "val_dataset = CityScapesDataset(csv_file='val.csv')\n",
     "test_dataset = CityScapesDataset(csv_file='test.csv')\n",
     "train_loader = DataLoader(dataset=train_dataset,\n",
-    "                          batch_size=10,\n",
-    "                          num_workers=4,\n",
+    "                          batch_size=1,\n",
+    "                          num_workers=1,\n",
     "                          shuffle=True)\n",
     "val_loader = DataLoader(dataset=val_dataset,\n",
-    "                          batch_size=10,\n",
-    "                          num_workers=4,\n",
+    "                          batch_size=1,\n",
+    "                          num_workers=1,\n",
     "                          shuffle=True)\n",
     "test_loader = DataLoader(dataset=test_dataset,\n",
-    "                          batch_size=10,\n",
-    "                          num_workers=4,\n",
+    "                          batch_size=1,\n",
+    "                          num_workers=1,\n",
     "                          shuffle=True)"
    ]
   },
@@ -53,9 +53,9 @@
     "        torch.nn.init.zeros_(m.bias.data)\n",
     "        #torch.nn.init.xavier_uniform_(m.bias.data)\n",
     "        \n",
-    "epochs     = 100\n",
+    "epochs     = 2\n",
     "#criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\n",
-    "criterion = loss.BCELoss()\n",
+    "criterion = loss.CrossEntropyLoss()\n",
     "fcn_model = FCN(n_class=n_class)\n",
     "fcn_model.apply(init_weights)\n",
     "#fcn_model = torch.load('best_model')\n",
@@ -80,26 +80,31 @@
     "use_gpu = torch.cuda.is_available()\n",
     "if use_gpu:\n",
     "    fcn_model = fcn_model.cuda()\n",
-    "    computing_device = torch.device('gpu')\n",
+    "    computing_device = torch.device('cuda')\n",
     "else:\n",
-    "    computing_device = torch.device('cpu')\n",
+    "    computing_device = torch.device('cuda')\n",
     "\n",
     "def train():\n",
     "    for epoch in range(epochs):\n",
     "        ts = time.time()\n",
+    "        print(epoch)\n",
     "        for iter, (X, tar, Y) in enumerate(train_loader):\n",
     "            optimizer.zero_grad()\n",
     "\n",
     "\n",
-    "            inputs = X.to(computing_device)\n",
-    "            labels = Y.to(computing_device)\n",
+    "            #inputs = X.to(computing_device)\n",
+    "            inputs = X.cuda()\n",
+    "            labels = Y.cuda()\n",
+    "            #labels = Y.to(computing_device)\n",
     "\n",
-    "\n",
+    "            print(\"Getting outputs\")\n",
     "            outputs = fcn_model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
+    "            \n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n",
+    "            if iter > 20:\n",
+    "                break\n",
     "            if iter % 10 == 0:\n",
     "                print(\"epoch{}, iter{}, loss: {}\".format(epoch, iter, loss.item()))\n",
     "        \n",
@@ -111,11 +116,13 @@
     "\n",
     "\n",
     "def val(epoch):\n",
+    "    print(\"Val\")\n",
     "    fcn_model.eval()\n",
     "    #Complete this function - Calculate loss, accuracy and IoU for every epoch\n",
     "    # Make sure to include a softmax after the output from your model\n",
     "    \n",
     "def test():\n",
+    "    None\n",
     "    #Complete this function - Calculate accuracy and IoU \n",
     "    # Make sure to include a softmax after the output from your model\n",
     "    \n",
