Training working need to add utils and track loss

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,22 +28,22 @@
     "val_dataset = CityScapesDataset(csv_file='val.csv')\n",
     "test_dataset = CityScapesDataset(csv_file='test.csv')\n",
     "train_loader = DataLoader(dataset=train_dataset,\n",
-    "                          batch_size=1,\n",
-    "                          num_workers=1,\n",
+    "                          batch_size=4,\n",
+    "                          num_workers=2,\n",
     "                          shuffle=True)\n",
     "val_loader = DataLoader(dataset=val_dataset,\n",
-    "                          batch_size=1,\n",
-    "                          num_workers=1,\n",
+    "                          batch_size=4,\n",
+    "                          num_workers=2,\n",
     "                          shuffle=True)\n",
     "test_loader = DataLoader(dataset=test_dataset,\n",
-    "                          batch_size=1,\n",
-    "                          num_workers=1,\n",
+    "                          batch_size=4,\n",
+    "                          num_workers=2,\n",
     "                          shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "        torch.nn.init.zeros_(m.bias.data)\n",
     "        #torch.nn.init.xavier_uniform_(m.bias.data)\n",
     "        \n",
-    "epochs     = 2\n",
+    "epochs     = 20\n",
     "#criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\n",
     "criterion = loss.CrossEntropyLoss()\n",
     "fcn_model = FCN(n_class=n_class)\n",
@@ -64,18 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 0,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-36-c8a73a625c62>, line 43)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-c8a73a625c62>\"\u001b[0;36m, line \u001b[0;32m43\u001b[0m\n\u001b[0;31m    if __name__ == \"__main__\":\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "use_gpu = torch.cuda.is_available()\n",
     "if use_gpu:\n",
@@ -87,7 +78,7 @@
     "def train():\n",
     "    for epoch in range(epochs):\n",
     "        ts = time.time()\n",
-    "        print(epoch)\n",
+    "        lossSum = 0\n",
     "        for iter, (X, tar, Y) in enumerate(train_loader):\n",
     "            optimizer.zero_grad()\n",
     "\n",
@@ -96,28 +87,38 @@
     "            inputs = X.cuda()\n",
     "            labels = Y.cuda()\n",
     "            #labels = Y.to(computing_device)\n",
-    "\n",
-    "            print(\"Getting outputs\")\n",
     "            outputs = fcn_model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
-    "            \n",
+    "            lossSum += loss.data\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            if iter > 20:\n",
+    "            if iter > 1:\n",
     "                break\n",
     "            if iter % 10 == 0:\n",
-    "                print(\"epoch{}, iter{}, loss: {}\".format(epoch, iter, loss.item()))\n",
-    "        \n",
-    "        print(\"Finish epoch {}, time elapsed {}\".format(epoch, time.time() - ts))\n",
+    "                None\n",
+    "                #print(\"epoch{}, iter{}, loss: {}\".format(epoch, iter, loss.item()))\n",
+    "            #print(torch.cuda.memory_allocated(device=None))\n",
+    "        print(\"Finish epoch {}, time elapsed {}, loss {}\".format(epoch, time.time() - ts, lossSum))\n",
     "        torch.save(fcn_model, 'best_model')\n",
-    "\n",
+    "        \n",
     "        val(epoch)\n",
     "        fcn_model.train()\n",
     "\n",
     "\n",
     "def val(epoch):\n",
-    "    print(\"Val\")\n",
     "    fcn_model.eval()\n",
+    "    vals = val_loader\n",
+    "    lossSum = 0\n",
+    "    for iter, (X, tar, Y) in enumerate(vals):\n",
+    "        with torch.no_grad():\n",
+    "            inputs = X.cuda()\n",
+    "            labels = Y.cuda()\n",
+    "#             print(torch.cuda.memory_allocated(device=None))\n",
+    "            outputs = fcn_model(inputs)\n",
+    "            lossSum += criterion(outputs, labels).data\n",
+    "        if iter > 1:\n",
+    "            break\n",
+    "    print(\"Epoch:\", epoch, \", Loss: \", lossSum)\n",
     "    #Complete this function - Calculate loss, accuracy and IoU for every epoch\n",
     "    # Make sure to include a softmax after the output from your model\n",
     "    \n",
