Working full data

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -29,15 +29,15 @@
     "test_dataset = CityScapesDataset(csv_file='test.csv')\n",
     "train_loader = DataLoader(dataset=train_dataset,\n",
     "                          batch_size=4,\n",
-    "                          num_workers=2,\n",
+    "                          num_workers=4,\n",
     "                          shuffle=True)\n",
     "val_loader = DataLoader(dataset=val_dataset,\n",
     "                          batch_size=4,\n",
-    "                          num_workers=2,\n",
+    "                          num_workers=4,\n",
     "                          shuffle=True)\n",
     "test_loader = DataLoader(dataset=test_dataset,\n",
     "                          batch_size=4,\n",
-    "                          num_workers=2,\n",
+    "                          num_workers=4,\n",
     "                          shuffle=True)"
    ]
   },
@@ -98,7 +98,8 @@
     "                None\n",
     "                #print(\"epoch{}, iter{}, loss: {}\".format(epoch, iter, loss.item()))\n",
     "            #print(torch.cuda.memory_allocated(device=None))\n",
-    "        print(\"Finish epoch {}, time elapsed {}, loss {}\".format(epoch, time.time() - ts, lossSum))\n",
+    "        print(\"Train epoch {}, time elapsed {}, loss {}\".format(epoch, time.time() - ts, lossSum))\n",
+    "        print(\"-------------------------------------\")\n",
     "        torch.save(fcn_model, 'best_model')\n",
     "        \n",
     "        val(epoch)\n",
@@ -115,10 +116,10 @@
     "            labels = Y.cuda()\n",
     "#             print(torch.cuda.memory_allocated(device=None))\n",
     "            outputs = fcn_model(inputs)\n",
-    "            lossSum += criterion(outputs, labels).data\n",
+    "            lossSum += criterion(outputs, labels).data.item()\n",
     "        if iter > 1:\n",
     "            break\n",
-    "    print(\"Epoch:\", epoch, \", Loss: \", lossSum)\n",
+    "    print(\"Validation Epoch:\", epoch, \", Loss: \", lossSum)\n",
     "    #Complete this function - Calculate loss, accuracy and IoU for every epoch\n",
     "    # Make sure to include a softmax after the output from your model\n",
     "    \n",
@@ -128,6 +129,7 @@
     "    # Make sure to include a softmax after the output from your model\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
+    "    print(\"Start\")\n",
     "    val(0)  # show the accuracy before training\n",
     "    train()"
    ]
